@@ -4,7 +4,6 @@ import com.listywave.list.application.domain.category.CategoryType;
 import com.listywave.list.application.dto.response.CategoryTypeResponse;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -16,11 +15,9 @@ public class CategoryController {
 
     @GetMapping("/categories")
     public ResponseEntity<List<CategoryTypeResponse>> getCategory() {
-        return ResponseEntity.ok()
-                .body(
-                        Arrays.stream(CategoryType.values())
-                                .map(CategoryTypeResponse::fromEnum)
-                                .collect(Collectors.toList())
-                );
+        List<CategoryTypeResponse> response = Arrays.stream(CategoryType.values())
+                .map(CategoryTypeResponse::of)
+                .toList();
+        return ResponseEntity.ok().body(response);
     }
 }
